# solace-agent-mesh-hackathon-quickstart

./: .env.example  .gitignore  AGENTS.md  CRISISAI_README.md  README-SETUP.md  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: globals.css  layout.tsx  page.tsx
app/api/: events-store.ts
app/api/events/: route.ts
app/api/events/broadcast/: route.ts
app/api/health/: route.ts
app/api/reset/: route.ts
app/api/simulate-failure/: route.ts
app/api/trigger-alert/: route.ts
app/components/: AgentVisualization.tsx  AlertCard.tsx  Controls.tsx  EventTimeline.tsx
configs/agents/: ai-analyzer.yaml  alert-receiver.yaml  broadcast-agent.yaml  camera-agent.yaml  crisis-detection-agent.yaml  crisis-ngo-agent.yaml  crisis-update-agent.yaml  crisis-verification-agent.yaml  geo-intelligence.yaml  stockpredictor-agent.yaml  tip-processor.yaml  tip-verification.yaml  yellowcake_agent.yaml
configs/gateways/: news-pluggin.yaml
data/: amber_alert.json  resolutions.json  tips.json
data/crises/: mock_actionable_crises.json  mock_crisis_updates.json  mock_raw_crises.json  mock_verified_crises.json
docs/deployment/: railway.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CrisisMarker.jsx  Dashboard.jsx  Globe.jsx  Header.jsx  SeverityLegend.jsx
frontend/src/services/: crisisService.js
src/: amber_tools.py  crisis_tools.py  geo_tools.py  predictor_tools.py  verification_tools.py  yellowcake_tools.py
