[project]
name = "sam-hackathon-quickstart"
version = "0.1.0"
description = "Solace Agent Mesh hackathon quickstart template"
requires-python = "==3.11.*"
dependencies = [
    "solace-agent-mesh>=1.13.3",
    "PyGithub==2.8.1",
    "sam-webhook-gateway @ git+https://github.com/SolaceLabs/solace-agent-mesh-core-plugins#subdirectory=sam-webhook-gateway"
]
